name:                treersec
version:             1
synopsis:            Structure Editing Combinators
description:         Build a structure editor for a programming language from combinators following the grammar.
homepage:            http://sneathlane.com/treersec
license:             BSD2
license-file:        LICENSE
author:              Jason Priestley
maintainer:          jason@sneathlane.com
category:            GUI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Treersec
  if impl(haste)
    build-depends: base >=4.0 && <5, haste-lib >=0.5 && <0.6, sneathlane-haste >=2 && <3
    haste-options: --link-jslib --ddisable-js-opts
  else
    build-depends: base >=4.0 && <5, haste-compiler >=0.5 && <0.6, sneathlane-haste >=2 && <3
    ghc-options:
  other-extensions:    KindSignatures, GADTs, OverloadedStrings
  default-language:    Haskell2010
